--- a/main.css
+++ b/main.css
@@ -1,17 +1,44 @@
+:root {
+  --card-width: 120px;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #e0f7e0; /* Spearmint green background */
+
+  font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+main {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  margin: 0;
-  background-color: #e0f7e0; /* Spearmint green background */
+}
+
+footer {
+  background-color: #709170;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  margin-top: auto; /* Pushes the footer to the bottom */
+}
+
+h1 {
+  color: #709170;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 120px);
+  grid-template-columns: repeat(4, var(--card-width));
   grid-gap: 10px;
 }
 
@@ -19,15 +46,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
-  height: 120px;
+  width: var(--card-width);
+  height: var(--card-width);
   border-radius: 10px;
   background: linear-gradient(145deg, #fdfbf8, #f2f1f0); /* Bone white gradient */
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2), -2px -2px 5px rgba(255, 255, 255, 0.5); /* Subtle shadow effect */
   cursor: pointer;
   user-select: none;
   color: #333;
-  font-weight: bold;
   text-align: center;
   transition: transform 0.2s, background 0.2s, top 0.2s, left 0.2s;
 }
@@ -64,6 +90,7 @@ button {
   background-color: #333;
   color: white;
   transition: background-color 0.2s;
+  font-family: "Jost";
 }
 
 button:hover {
@@ -71,10 +98,12 @@ button:hover {
 }
 
 .correct-answers {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Must be as wide as the grid-container */
+  width: calc((var(--card-width) * 4) + 40px);
+  height: var(--card-width);
 }
 
 .theme {
