--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 32px;
 }
 
 footer {
@@ -52,29 +53,34 @@ h1 {
   width: var(--card-width);
   height: var(--card-width);
   border-radius: 10px;
-  background: linear-gradient(145deg, #fdfbf8, #f2f1f0); /* Bone white gradient */
+  background-color: #fdfbf8; /* Bone white gradient */
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2), -2px -2px 5px rgba(255, 255, 255, 0.5); /* Subtle shadow effect */
   cursor: pointer;
   user-select: none;
   color: #333;
   font-weight: bold;
   text-align: center;
-  transition: transform 0.2s, background 0.2s, top 0.2s, left 0.2s;
+  transition: transform 0.25s, background-color 0.5s, top 0.25s, left 0.25s;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  &.selected {
+    background: rgb(142 241 143 / 90%);
+  }
+
+  &.warn {
+    background-color: rgba(197, 178, 70, 0.837);
+  }
+  
+  &.resolved {
+    background: linear-gradient(145deg, #90ee90, #76c776); /* Green for resolved cards */
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2), inset -2px -2px 5px rgba(255, 255, 255, 0.5); /* Subtle inset shadow */
+    cursor: default;
+  }
 }
 
-.card:hover {
-  transform: scale(1.05);
-}
-
-.card.selected {
-  background: #caeaca;
-}
-
-.card.resolved {
-  background: linear-gradient(145deg, #90ee90, #76c776); /* Green for resolved cards */
-  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2), inset -2px -2px 5px rgba(255, 255, 255, 0.5); /* Subtle inset shadow */
-  cursor: default;
-}
 
 .correct-answers {
   display: flex;
