--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ h1 {
   color: #709170;
 }
 
+.hidden {
+  display: none;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--card-width), 1fr));
@@ -167,13 +171,20 @@ button:hover {
   }
 }
 
-.confetti {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #ff0;
-  animation: confetti 3s linear infinite;
+.splash-content {
+  height: 100dvh;
+
+  #confetti-container {
+    .confetti {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background-color: #ff0;
+      animation: confetti 3s linear infinite;
+    }
+  }  
 }
+
 
 @media (max-width: 600px) {
   :root {
@@ -191,5 +202,19 @@ button:hover {
   button {
     font-size: 0.9em;
     padding: 8px 16px;
+  }
+}
+
+.confetti {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  opacity: 0.7;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(100vh);
+    opacity: 0;
   }
 }
