--- a/splash.css
+++ b/splash.css
@@ -13,6 +13,19 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+
+  .img-wrap {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 .splash-screen.show {
