--- a/main.css
+++ b/main.css
@@ -214,55 +214,55 @@ button {
 
 @keyframes appear-animation-1 {
   0% {
-    transform: translate(0, 0);
+    transform: rotate(0deg) scale(1);
   }
   25% {
-    transform: translate(10px, -10px);
+    transform: rotate(90deg) scale(1.1);
   }
   50% {
-    transform: translate(-10px, 10px);
+    transform: rotate(180deg) scale(0.9);
   }
   75% {
-    transform: translate(10px, 10px);
+    transform: rotate(270deg) scale(1.05);
   }
   100% {
-    transform: translate(0, 0);
+    transform: rotate(360deg) scale(1);
   }
 }
 
 @keyframes appear-animation-2 {
   0% {
-    transform: translate(0, 0);
+    transform: rotate(0deg) scale(1);
   }
   25% {
-    transform: translate(10px, 10px);
+    transform: rotate(45deg) scale(1.1);
   }
   50% {
-    transform: translate(+10px, 20px);
+    transform: rotate(90deg) scale(0.9);
   }
   75% {
-    transform: translate(10px, 25px);
+    transform: rotate(135deg) scale(1.05);
   }
   100% {
-    transform: translate(0, 0);
+    transform: rotate(180deg) scale(1);
   }
 }
 
-@keyframes appear-animation-2 {
+@keyframes appear-animation-3 {
   0% {
-    transform: translate(0, 0);
+    transform: rotate(0deg) scale(1);
   }
   25% {
-    transform: translate(-20px, -20px);
+    transform: rotate(-45deg) scale(1.1);
   }
   50% {
-    transform: translate(-10px, -10px);
+    transform: rotate(-90deg) scale(0.9);
   }
   75% {
-    transform: translate(15px, 15px);
+    transform: rotate(-135deg) scale(1.05);
   }
   100% {
-    transform: translate(0, 0);
+    transform: rotate(-180deg) scale(1);
   }
 }
 
